# timeintervals

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst  modules.rst  time_interval.rst  time_set.rst
src/timeintervals/: __init__.py  time_interval.py  time_set.py
tests/: test_time_interval.py  test_time_set.py
timeintervals/: __init__.py
timeintervals/src/: _continuous_set.py  _custom_exceptions.py  time_interval.py  time_set.py
